syntax = "proto3";
package matcher;

service Matcher {
    rpc MatchQuery (MatchRequest) returns (MatchResponse) {}
}

message MatchRequest {
    string query = 1;
    string language = 2;
    bool debug = 3;
    bool show_all_matches = 4;
}

message MatchResponse {
    repeated EndpointMatch matches = 1;
    double score = 2;
    bool has_matches = 3;
}

message ParameterInfo {
    string name = 1;
    string description = 2;
    bool required = 3;
}

message EndpointMatch {
    string endpoint_id = 1;
    double similarity = 2;
    map<string, string> parameters = 3;
    bool is_negated = 4;
    repeated ParameterInfo missing_required = 5;
    repeated ParameterInfo missing_optional = 6;
}
